Fixes mobile version and text spacing

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -183,7 +183,7 @@ footer.footer .icon-link {
   display: block;
   line-height: 1.1;
   margin-bottom: 0;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.2em;
 }
 
 .hero-with-video-bg .publication-title-sub {
